--- a/LostSocks/Info.plist
+++ b/LostSocks/Info.plist
@@ -33,6 +33,8 @@
 	</dict>
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string>To show where you are on a map</string>
+	<key>NSPhotoLibraryUsageDescription</key>
+	<string>To be able to upload image of your sock</string>
 	<key>UISupportedInterfaceOrientations</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
